# redistributed_apps

./: Cargo.toml  current.json  firefox.json  package.json  pnpm-lock.yaml  vlc  vlc.json
.github/workflows/: vlc.yml
js/: vlc.js
src/: main.rs  vlc.rs
