[package]
name = "redistributed_apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = "1.4.1"
base64 = "0.22.0"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
serde_json = "1.0.114"
